--- a/fe/package.json
+++ b/fe/package.json
@@ -10,9 +10,12 @@
   "dependencies": {
     "antd": "^4.16.13",
     "next": "^12.0.2",
+    "next-redux-wrapper": "^6.0.2",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
+    "redux": "^4.1.2",
     "styled-components": "^5.3.3"
   }
 }
