--- a/fe/.eslintrc
+++ b/fe/.eslintrc
@@ -1,6 +1,7 @@
 {
+  "parser": "babel-eslint",
   "parserOptions": {
-    "ecmaVersion": 2021,
+    "ecmaVersion": 2020,
     "sourceType": "module",
     "ecmaFeatures": {
       "jsx": true
@@ -9,8 +10,45 @@
   "env": {
     "browser": true,
     "node": true,
-    "es6": true
+    "es6": true,
+    "jest": true
   },
-  "extends": ["eslint:recommended", "plugin:react/recommended"],
-  "plugins": ["import", "react-hooks"]
+  // "extends": ["airbnb", "eslint:recommended", "plugin:prettier/recommended"],
+  "extends": ["airbnb", "plugin:prettier/recommended"],
+  // 꼭 배열의 마지막이 prettier여야 중복 규칙을 비활성화 할 수 있습니다.
+  // "plugins": ["prettier"],
+  "plugins": ["import", "react-hooks", "jsx-a11y", "prettier"],
+  "rules": {
+    "jsx-a11y/label-has-associated-control": "off",
+    "jsx-a11y/anchor-is-valid": "off",
+    "no-console": "off",
+    "no-underscore-dangle": "off",
+    "react/forbid-prop-types": "off",
+    "react/jsx-filename-extension": "off",
+    "func-names": "off",
+    // "react/jsx-filename-extension":
+    // ["error",
+    //  { "extensions": [".js", ".jsx"] }
+    // ]
+    "react/jsx-one-expression-per-line": "off",
+    "react/jsx-props-no-spreading": "off",
+    "object-curly-newline": "off",
+    "linebreak-style": "off",
+    "no-param-reassign": "off",
+    // componenet에서 arrow function을 사용할 수 없는 문제
+    "react/function-component-definition": "off",
+    // crlf문제
+    "prettier/prettier": [
+      "error",
+      {
+        "endOfLine": "auto"
+      }
+    ]
+  },
+  // eslint를 무시할 폴더
+  "ignorePatterns": ["node_modules/"]
 }
+
+// https://baeharam.netlify.app/posts/lint/Lint-ESLint-+-Prettier-%EC%84%A4%EC%A0%95%ED%95%98%EA%B8%B0
+// https://github.com/yannickcr/eslint-plugin-react/blob/master/docs/rules/function-component-definition.md
+// https://velog.io/@_jouz_ryul/ESLint-Prettier-Airbnb-Style-Guide%EB%A1%9C-%EC%84%A4%EC%A0%95%ED%95%98%EA%B8%B0
