--- a/fe/package.json
+++ b/fe/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "next dev -p 3650"
+    "dev": "next dev"
   },
   "author": "",
   "license": "ISC",
@@ -24,8 +24,12 @@
     "redux-saga": "^1.1.3"
   },
   "devDependencies": {
-    "eslint": "^8.2.0",
+    "babel-eslint": "^10.1.0",
+    "eslint-config-airbnb": "^19.0.0",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.27.0",
     "eslint-plugin-react-hooks": "^4.3.0",
     "redux-logger": "^3.0.6"
