--- a/fe/package.json
+++ b/fe/package.json
@@ -13,6 +13,7 @@
     "@reduxjs/toolkit": "^1.6.2",
     "antd": "^4.16.13",
     "dotenv": "^10.0.0",
+    "immer": "^9.0.6",
     "next": "^12.0.3",
     "next-redux-wrapper": "^6.0.2",
     "prop-types": "^15.7.2",
