--- a/fe/package.json
+++ b/fe/package.json
@@ -12,7 +12,7 @@
     "@ant-design/icons": "^4.7.0",
     "@reduxjs/toolkit": "^1.6.2",
     "antd": "^4.16.13",
-    "dotenv": "^10.0.0",
+    "axios": "^0.24.0",
     "faker": "^5.5.3",
     "immer": "^9.0.6",
     "nanoid": "^3.1.30",
